--- a/index.html
+++ b/index.html
@@ -1,13 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js" integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>To-Do List</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<style>
+.completed {
+  text-decoration: line-through;
+  color: #03b973;
+}
+</style>
 </head>
 <body>
-    
-    
+
+<div class="container mt-5 bg-primary p-5 ">
+  <h2 class="mb-4 text-light">Add Your Tasks</h2>
+  <div class="input-group mb-3">
+    <input type="text" class="form-control" id="taskInput" placeholder="Add new task...">
+    <div class="input-group-append">
+      <button class="btn btn-outline-light ml-2 rounded-2" type="button" id="addTaskBtn">Add Task</button>
+    </div>
+  </div>
+  <ul class="list-group mb-3" id="taskList">
+  </ul>
+  <div>
+    <button class="btn btn-light mr-2" id="showAllBtn">Show All</button>
+    <button class="btn btn-success mr-2" id="showCompletedBtn">Show Completed</button>
+    <button class="btn btn-danger" id="showIncompleteBtn">Show Incomplete</button>
+  </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+$(document).ready(function(){
+  $('#addTaskBtn').click(function(){
+    var taskName = $('#taskInput').val();
+    if(taskName.trim() !== ''){
+      $('#taskList').append('<li class="list-group-item"><input type="checkbox" class="taskCheckbox mr-2"><span>' + taskName + '</span><button class="btn btn-outline-danger btn-md float-right deleteBtn">Delete</button></li>');
+      $('#taskInput').val('');
+    }
+  });
+
+  $(document).on('click', '.taskCheckbox', function(){
+    $(this).siblings('span').toggleClass('completed');
+  });
+
+  $(document).on('click', '.deleteBtn', function(){
+    $(this).parent().remove();
+  });
+
+  $('#showAllBtn').click(function(){
+    $('#taskList li').show();
+  });
+
+  $('#showCompletedBtn').click(function(){
+    $('#taskList li').hide();
+    $('#taskList li:has(.completed)').show();
+  });
+
+  $('#showIncompleteBtn').click(function(){
+    $('#taskList li').hide();
+    $('#taskList li:not(:has(.completed))').show();
+  });
+});
+</script>
 </body>
 </html>
